Thu Dec 12 17:58:41 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.key.emacs: Add C-u/C-h/C-w. (#72245)

Thu Dec 12 17:01:38 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_find_widget): Skip insensitive
	widgets. (#84061)

Thu Dec 12 15:08:01 2002  Owen Taylor  <otaylor@redhat.com>

	* acinclude.m4: Remove unneeded bits of AM_GTK_GNU_TEXT
	macros.

Thu Dec 12 18:25:17 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktextview.c (gtk_text_view_button_press_event): 
	return TRUE when button 3 is pressed, fixes #78324.

Thu Dec 12 10:12:39 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c: Turn off DEBUG_VALIDATION_AND_SCROLLING
	that got turned on in an accidental commit.

Wed Dec 11 18:30:05 2002  Owen Taylor  <otaylor@redhat.com>

	* === Released GTK+-2.1.4 ===

	* NEWS: Updated.

	* modules/input/Makefile.am (INCLUDES): Remove GTK_LOCALEDIR
	from here as well. (Manish Singh)

2002-12-11  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkpixmap-win32.c (gdk_pixmap_new,
	gdk_bitmap_create_from_data, gdk_pixmap_create_from_data)
	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkimage-win32.c (_gdk_win32_setup_pixmap_image):
	Functions now take a GdkDrawable instead of GdkWindow parameter,
	like in X11 and linux-fb backends (#100780)

	* gdk/win32/gdkwindow-win32.c (get_default_title): Do use
	g_get_application_name() (I now have a fresh enough GLib).

Wed Dec 11 14:04:23 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: version 2.1.4, interface age 1.
	
	* configure.in: Require GLib-2.1.4, so we will catch
	the need for the new AM_GLIB_DEFINE_LOCALEDIR() in
	an obvious way.

	* configure.in gtk/Makefile.am: Use AM_GLIB_DEFINE_LOCALEDIR()

Tue Dec 10 15:46:01 PST 2002  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): 
	gdk_x11_get_xatom_by_name_for_display takes a GdkDisplay *,
	not an XDisplay * (obvious typo fix for the previous commit)

2002-12-11  Matthias Clasen  <maclas@gmx.de>
